added TWT2022 agenda and registration links

--- a/events.html
+++ b/events.html
@@ -30,10 +30,11 @@ title: Events
   </p>
 
   <h3> TaxonWorks Together 2022 </h3>
+  <a href="https://illinois.zoom.us/meeting/register/tZcsduutqTktE9XYiaZKV0Lb4zhbs9SXmvT3">REGISTRATION is LIVE</a> - Please share!
   <ul>
-    <li>What: Our 3rd annual TaxonWorks community building event.</li>
+    <li>What: Our 3rd annual TaxonWorks community building event. <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2022">See Agenda</a></li>
     <li>When: 12 - 14 September 2022.</li>
-    <li>Where: Zoom</li>
+    <li>Where: <a href="https://illinois.zoom.us/meeting/register/tZcsduutqTktE9XYiaZKV0Lb4zhbs9SXmvT3">Register for your Zoom link.</a></li>
     <li>Who: Open to anyone.</li>
     <li>Your Ideas: <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2022">Please submit your input for events</a> at TaxonWorks Together 2022.</li>
   </ul>
