updating to move twt2022 to past event section

--- a/events.html
+++ b/events.html
@@ -29,15 +29,13 @@ title: Events
     </ul>  
   </p>
 
-  <h3> TaxonWorks Together 2022 </h3>
-  <a href="https://illinois.zoom.us/meeting/register/tZcsduutqTktE9XYiaZKV0Lb4zhbs9SXmvT3">REGISTRATION is LIVE</a> - Please share!
-  <ul>
-    <li>What: Our 3rd annual TaxonWorks community building event. <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2022">See Agenda</a></li>
-    <li>When: 12 - 14 September 2022.</li>
-    <li>Where: <a href="https://illinois.zoom.us/meeting/register/tZcsduutqTktE9XYiaZKV0Lb4zhbs9SXmvT3">Register for your Zoom link.</a></li>
+  <h3> TaxonWorks Together 2023 </h3>
+    <ul>
+    <li>What: Our 4th annual TaxonWorks community-building event.
+    <li>When: Fall 2023</li>
+    <li>Where: Registration to open in 2023.
     <li>Who: Open to anyone.</li>
-    <li>Your Ideas: <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2022">Please submit your input for events</a> at TaxonWorks Together 2022.</li>
-  </ul>
+    </ul>
 
   <h2> Regular Events by Month </h2>
   All these events are on Wednesdays at the same time every week. The flexible agendas are set by those attending the meetings.
@@ -173,7 +171,10 @@ title: Events
 
 
   <h2> Past </h2>
-  <em> As of end 2021 </em>
+  <em> As of end 2022 </em>
+
+  <h3> TaxonWorks Together 2022 </h3>
+  See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2022">the github-based homepage</a> for this event.
 
   <h3> TaxonWorks Together 2021 </h3>
   See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2021">the github-based homepage</a> for this event.
