--- a/events.html
+++ b/events.html
@@ -38,8 +38,8 @@ title: Events
     </ul>
 
   <h2> Regular Events by Month </h2>
-  All these events are on Wednesdays at the same time every week. The flexible agendas are set by those attending the meetings.
-  The “early sessions” have topics (but are flexible, as need be). In the “late” sessions, topics are determined by those who join.
+  All these [**unconference**](https://en.wikipedia.org/wiki/Unconference) events are on Wednesdays at the same time every week. The _flexible agendas_ are set by those attending the meetings.
+  The "early sessions" have suggested topics (but are adaptable, as need be). In the "late" sessions, topics are determined by those who join.
   <table class="table">
     <thead>
       <tr>
