fix html a href link

--- a/events.html
+++ b/events.html
@@ -38,7 +38,7 @@ title: Events
     </ul>
 
   <h2> Regular Events by Month </h2>
-  All these [**unconference**](https://en.wikipedia.org/wiki/Unconference) events are on Wednesdays at the same time every week. The _flexible agendas_ are set by those attending the meetings.
+All these <a href"https://en.wikipedia.org/wiki/Unconference">**unconference**</a>-style events are on Wednesdays at the same time every week. The _flexible agendas_ are set by those attending the meetings.
   The "early sessions" have suggested topics (but are adaptable, as need be). In the "late" sessions, topics are determined by those who join.
   <table class="table">
     <thead>
