--- a/collaboration.html
+++ b/collaboration.html
@@ -3,6 +3,7 @@ layout: default
 title: Collaboration 
 ---
 <div class="container">
+  
   <div class="alert alert-warning" role="alert">
     In compilation. 
   </div>
@@ -10,15 +11,35 @@ title: Collaboration
   <h1 class="mt-5">{{ page.title }}</h1>
   <span class="lead"> We work with a wide range of people and organizations to advance biodiversity informatics</span>
 
+  <div class="container"> 
+    <h2 class="mt-5">Community Resources</h2>
+    <span class="lead">The SFG provides live instances of various open-source software packages as tools for our collaborators. We ask our collaborators to read and understand our shared expectations in these endeavors.</span>
+
+    <div class="container">
+      <h3>TaxonWorks</h3>
+      <p> We have installations of <a href="https://taxonworks.org">TaxonWorks</a> in <a href="/docs/taxonworks_in_production_at_sfg.html">production</a>
+      and <a href="/docs/taxonworks_sandboxes_at_sfg.html">sandboxes</a>.</p>
+    </div>
+  </div>
+
   <div class="container">
     <h2 class="mt-5">Funding from the Species File Group</h2>
-    <span class="lead"> Collaboration has been aided by awards from the SFG that advance biodiversity informatics </span>
-
+    <span class="lead"> Small awards from the SFG that advance biodiversity informatics </span>
     <div class="container">
       <h3> Current opportunities </h3>
       <ul>
         <li> See <a href="http://orthsoc.org/resources/grants-awards/"> grants via the Orthopterist's society</a> </li>
         <li> Contact R. Edward DeWalt regarding current opportunities for small awards that fill gaps in the <a href="https://catalogueoflife.org/">Catalogue of Life</a></li>
+      </ul>
+    </div>
+
+    <div class="container">
+      <h3> Small grant awardees </h3>
+      <ul>
+        <li> Thomas McElrath, Matthew Gimmel, and Gareth Powell: World Cucujoidea. <em>In progress.</em></li>
+        <li> Marcin Kaminski: World Sepidiini. Available at <a href="https://doi.org/10.48580/d4sl-3gm">https://doi.org/10.48580/d4sl-3gm</a>. <em>Finished</em></li> 
+        <li> Michele Rossini: World dung beetles of subfamily Bolboceratinae (Coleoptera: Scarabaeoidea: Geotrupidae). <em>In progress.</em></li>
+        <li> Vinicius S. Ferreira: Lycidae (Coleoptera: Elateroidea) of the World. <em>In progress.</em></li>
       </ul>
     </div>
 
@@ -31,16 +52,6 @@ title: Collaboration
         <li> Curators, at an hourly rate</li>
         <li> Taxonomists, particularly those contributing to the Catalogue of Life Curators, at an hourly rate</li>
       </ul>
-    </div>
-  </div>
-
-  <div class="container"> 
-    <h2 class="mt-5">Community Resources</h2>
-    <span class="lead">The SFG provides live instances of various open-source software packages as tools for our collaborators. We ask our collaborators to read and understand our shared expectations in these endeavors.</span>
-    <div class="container">
-      <h3>TaxonWorks</h3>
-      <p> We have resources for <a href="/docs/taxonworks_in_production_at_sfg.html">production</a>
-      and <a href="/docs/taxonworks_sandboxes_at_sfg.html">sandbox</a> instances.</p>
     </div>
   </div>
 
@@ -108,7 +119,7 @@ title: Collaboration
     <h2 class="mt-5">Labs</h2>
     <p class="lead"> Labs using SFG infrastructure in return guiding us with feedback and direction</p>
     <ul>
-      <li><a href="https://mndi.museunacional.ufrj.br/aracnologia/aracnol.htm>Adriano Kury's Arachno Lab"</a></li>
+      <li><a href="https://mndi.museunacional.ufrj.br/aracnologia/aracnol.htm">Adriano Kury's Arachno Lab</a></li>
       <li><a href="https://sites.psu.edu/deanslab/">Dean's Lab, Penn State</a></li>
       <li>Smith Lab</li>
       <li><a href="https://leafhopper.inhs.illinois.edu/">Dietrich Leafhopper Lab</a></li>
@@ -125,5 +136,4 @@ title: Collaboration
       <li> <em> Any? </em> </li>
     </ul>
   </div>
-
 </div>
