--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: Species File Group - Home
     <div class="col-md-13">
       <h3>Give</h3>
       <p class="lead">Please partner with us to support biodiversity informatics research, taxonomy, and natural history collections. Contributions impact efforts, from local-to-global, to understand, preserve, and utilitze the Earth's vast biodiversity. Questions?  <a href="/about">Contact us</a>.</p>
-      <form action="https://bbisqa.uif.uillinois.edu/PaymentPageTransferQA.aspx" method="post" name="giving_form" id="giving_form">
+      <form action="https://payments.uif.uillinois.edu/Gifts/PaymentPageTransfer.aspx" method="post" name="giving_form" id="giving_form">
 
         <input type="hidden" name="TRACKING_CODE" value="10547"> <!-- generates confirmation emails -->
         <input type="hidden" name="FUND1" value="11338842/Species File Group Catalyzing Biodiversity Informatics Fund"> <!-- not crossreferenced with git fund -->
