Add index to data in Checklistbank

--- a/collaboration.html
+++ b/collaboration.html
@@ -55,14 +55,16 @@ title: Collaboration
     </div>
   </div>
 
-  <div class="container">
+  <div class="container" id="catalogue-of-life">
     <h2 class="mt-5">Catalogue of Life</h2>
     <p class="lead">The SFG supports the Editorship, development and curation of the <a href="https://catalogueoflife.org/">Catalogue of Life</a></p>
     <ul>
+      <li> The Species File Group manages the data and pipeline for over 20 dataset. See <a href="/data#catalogue-of-life">Data</a> for the complete list. </li>
       <li> The Editor of the Catalogue of Life, Yuri Roskov, is a SFG Core member </li>
       <li> Geoff Ower is a SFG Core member, he is its key incoming-data-wrangler and a core contributor to GBIF's new Catalog of Life+ tools and metadata development</li>
       <li> The SFG has actively funded those seeking to fill gaps in the Catalog of Life. Its early mission was focused on facilitating the growth of the Catalog of Life through the sharing of its tools to others who wished to contribute to this project.</li>
     </ul> 
+
   </div>
 
   <div class="container">
