--- a/data.html
+++ b/data.html
@@ -4,11 +4,11 @@ title: Data
 ---
 <div class="container">
   <h1 class="mt-5">{{ page.title }}</h1>
-  <p class="lead"> World class datasets from SFG members and collaborators</p>
+  <p class="lead"> World class data from SFG members and collaborators</p>
 
   <div class="container">
     <h2 class="mt-5">TaxonWorks data via APIs</h2>
-    <p class="lead"> Access data curated in SFG's instances of TaxonWorks </p>
+    <p class="lead">Access data curated in SFG's instances of TaxonWorks </p>
     <ul>
       <li><a href="http://sfg.taxonworks.org/api/v1">Data from sfg.taxonworks.org</a></li>
       <li><a href="http://api.taxonworks.org">Using a TaxonWorks API</a></li>
@@ -18,10 +18,39 @@ title: Data
 
   <div class="container">
     <h2 class="mt-5">Global Names</h2>
-    <p class="lead"> Access data indexed by Global Names  </p>
+    <p class="lead">Access data indexed by Global Names  </p>
     <ul>
       <li><a href="http://globalnames.org/apps/">GlobalNames APIs</a></li>
     </ul> 
+  </div>
+
+  <div class="container" id="catalogue-of-life">
+    <h2 class="mt-5">Catalogue of Life/GBIF Checklistbank</h2>
+    <p class="lead">Access data managed in TaxonWorks or SpeciesFiles that are used in the construction of the Catalogue of Life </p>
+    <p> See also <a href="/collaboration#catalogue-of-life">Collaboration</a>.</p>
+    <ul>
+      <li><a href="https://www.checklistbank.org/dataset/2317/classification">3i Auchenorrhyncha</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1166/classification">3i Curculio</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1061/classification">SF Aphid</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1169/classification">SF Chrysididae</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1051/classification">SF Cockroach</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1192/classification">SF Coleorrhyncha</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1134/classification">SF Coreoidea</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1158/classification">SF Dermaptera</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1089/classification">SF Embioptera</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1170/classification">SF Grylloblattodea</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1198/classification">SF Isoptera</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1173/classification">SF Lygaeoidea</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1062/classification">SF Mantodea</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1168/classification">SF Mantophasmatodea</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1050/classification">SF Orthoptera</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1050/classification">SF Phasmida</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1133/classification">SF Psocodea</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1167/classification">SF Zoraptera</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/55434/classification">Global Lepidoptera Index</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/1204/classification">StaphBase</a></li>
+      <li><a href="https://www.checklistbank.org/dataset/2256/classification">World Catalogue of Opiliones</a></li>
+    </ul>
   </div>
 
   <div class="container">
