--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@ pagination:
         </h3>
       </header>
 
-    {% for post in paginator.posts reversed %}
+    {% for post in paginator.posts %}
     <div class="container">
       <article class="m-2">
         <h2>{{ post.title }}</h2>
