--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ title: Species File Group - Home
   <div class="container pt-5">
     <div class="col-md-13">
       <h3>Give</h3>
-      <p class="lead">Please partner with us to support biodiversity informatics research, taxonomy, and natural history collections. Contributions impact efforts, from local-to-global, to understand, preserve, and utilitze the Earth's vast biodiversity. Questions?  <a href="/about">Contact us</a>.</p>
+      <p class="lead">Please partner with us to support biodiversity informatics research, taxonomy, and natural history collections. Contributions impact efforts, from local-to-global, to understand, preserve, and responsibly use the Earth's vast biodiversity. Questions?  <a href="/about">Contact us</a>.</p>
       <form action="https://payments.uif.uillinois.edu/Gifts/PaymentPageTransfer.aspx" method="post" name="giving_form" id="giving_form">
 
         <input type="hidden" name="TRACKING_CODE" value="10547"> <!-- generates confirmation emails -->
