--- a/software.html
+++ b/software.html
@@ -14,7 +14,7 @@ title: Software
   <div class="container">
   <h2> TaxonWorks </h2>
   <p class="lead"> Describe life </p>
-  <p> <a href="http://taxonworks.org">TaxonWorks</a> is a 3rd (4th?) generation workbench that has a rich history of precursors include 3i, mx, and Species Files.</p>
+  <p> <a href="http://taxonworks.org">TaxonWorks</a> is a 3rd (4th?) generation workbench that has a rich history of precursors including 3i, mx, and Species Files.</p>
   </div>
 
   <div class="container">
