adding YouTube link

--- a/events.html
+++ b/events.html
@@ -25,7 +25,8 @@ title: Events
             shareable calendar link</a></em> if you want to import into your Google calendar and have live updates. (For this link to work you must have a google account and be logged in. You'll be asked to <b>Add Calendar</b> and then to change to your <b>Time Zone</b>).</li>
           <li>Use this <em><a href="https://calendar.google.com/calendar/ical/dt1h41u4dv7vsel7iobrdpms58%40group.calendar.google.com/public/basic.ics">ics file</a></em> to import into your calendar. (Only updates if you re-download, if we make any changes on our end).</li>
           <li>Use this <a href="https://calendar.google.com/calendar/embed?src=dt1h41u4dv7vsel7iobrdpms58%40group.calendar.google.com&ctz=America%2FChicago">Public URL</a></li> to see the TaxonWorks Weekly Plus Calendar (Chicago TIME). (It's not pretty, but it works without login, and updates with any changes made on our end).</li>
-      </ul>
+      <li>Watch our <a href="https://www.youtube.com/@TaxonWorks">TaxonWorks videos on YouTube</a></li>    
+    </ul>
     </ul>  
   </p>
 
