changing gitter URL and adding Slack invite URL

--- a/events.html
+++ b/events.html
@@ -18,7 +18,8 @@ title: Events
         <li>subscribe to the <em>email listserv</em>: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce</a> and</li>
         <li>click "confirm" in the first email you receive from the listserv.</li>
       </ol>
-      <li><em>Chat</em> with a member of the Species File Group and its collaborators anytime at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
+      <li><em>Chat</em> with a member of the Species File Group and its collaborators anytime via our <a href="https://matrix.to/#/#taxonworks:gitter.im">TaxonWorks Gitter Public Workspace</a>. 
+      <li>Are you more familiar with <em>Slack</em>? We invite you to join our <a href="https://join.slack.com/t/taxonworks/shared_invite/zt-1pnnvq3dc-4b685~M8gssOCR2Yk956Ng">TaxonWorks Slack Workspace</a>. It's integrated with our Gitter Public Workspace.</li>  
       <li><em>TaxonWorks Weekly Plus Calendar</em>: add TaxonWorks Weekly events to your calendar now. <em>Three options</em> for you:</li>
         <ul>
           <li>Get this <em><a href="https://calendar.google.com/calendar/u/0?cid=ZHQxaDQxdTRkdjd2c2VsN2lvYnJkcG1zNThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">
